<resources>
    <string name="app_name">Idiomatic Android Gradle</string>
    <string name="sample1_title">Sample1</string>
    <string name="sample2_title">Sample2</string>
    <string name="sample3_title">Sample3</string>
    <string name="sample4_title">Sample4</string>
    <string name="sample5_title">Sample5</string>
    <string name="sample6_title">Sample6</string>
    <string name="sample7_title">Sample7</string>
    <string name="sample8_title">Sample8</string>
    <string name="sample9_title">Sample9</string>
    <string name="sample10_title">Sample10</string>
    <string name="sample11_title">Sample11</string>
    <string name="sample12_title">Sample12</string>
    <string name="sample13_title">Sample13</string>
    <string name="sample14_title">Sample14</string>
    <string name="sample15_title">Sample15</string>
    <string name="sample16_title">Sample16</string>
    <string name="sample17_title">Sample17</string>
    <string name="sample18_title">Sample18</string>
    <string name="sample19_title">Sample19</string>
    <string name="sample20_title">Sample20</string>
    <string name="sample21_title">Sample21</string>
    <string name="sample22_title">Sample22</string>
    <string name="sample23_title">Sample23</string>
    <string name="sample24_title">Sample24</string>
    <string name="sample25_title">Sample25</string>
    <string name="sample26_title">Sample26</string>
    <string name="sample27_title">Sample27</string>
    <string name="sample28_title">Sample28</string>
    <string name="sample29_title">Sample29</string>
    <string name="sample30_title">Sample30</string>
    <string name="sample31_title">Sample31</string>
    <string name="sample32_title">Sample32</string>
    <string name="sample33_title">Sample33</string>
    <string name="sample34_title">Sample34</string>
    <string name="sample35_title">Sample35</string>
    <string name="sample36_title">Sample36</string>
    <string name="sample37_title">Sample37</string>
    <string name="sample38_title">Sample38</string>
    <string name="sample39_title">Sample39</string>
    <string name="sample40_title">Sample40</string>
    <string name="sample41_title">Sample41</string>
    <string name="sample42_title">Sample42</string>
    <string name="sample43_title">Sample43</string>
    <string name="sample44_title">Sample44</string>
    <string name="sample45_title">Sample45</string>
    <string name="sample46_title">Sample46</string>
    <string name="sample47_title">Sample47</string>
    <string name="sample48_title">Sample48</string>
    <string name="sample49_title">Sample49</string>
    <string name="sample50_title">Sample50</string>
    <string name="sample51_title">Sample51</string>
    <string name="sample52_title">Sample52</string>
    <string name="sample53_title">Sample53</string>
    <string name="sample54_title">Sample54</string>
    <string name="sample55_title">Sample55</string>
    <string name="sample56_title">Sample56</string>
    <string name="sample57_title">Sample57</string>
    <string name="sample58_title">Sample58</string>
    <string name="sample59_title">Sample59</string>
    <string name="sample60_title">Sample60</string>

</resources>