<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sample1"
        android:icon="@drawable/ic_looks_1_24"
        android:title="@string/sample1_title" />

    <item
        android:id="@+id/navigation_sample2"
        android:icon="@drawable/ic_looks_2_24"
        android:title="@string/sample2_title" />

    <item
        android:id="@+id/navigation_sample3"
        android:icon="@drawable/ic_looks_3_24"
        android:title="@string/sample3_title" />

    <item
        android:id="@+id/navigation_sample4"
        android:icon="@drawable/ic_looks_4_24"
        android:title="@string/sample4_title" />

    <item
        android:id="@+id/navigation_sample5"
        android:icon="@drawable/ic_looks_5_24"
        android:title="@string/sample5_title" />

</menu>