<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sample1">

    <fragment
        android:id="@+id/navigation_sample1"
        android:name="com.yugyd.idiomatic.android.gradle.ui.sample1.Sample1Fragment"
        android:label="@string/sample1_title"
        tools:layout="@layout/fragment_sample1" />

    <fragment
        android:id="@+id/navigation_sample2"
        android:name="com.yugyd.idiomatic.android.gradle.ui.sample2.Sample2Fragment"
        android:label="@string/sample2_title"
        tools:layout="@layout/fragment_sample2" />

    <fragment
        android:id="@+id/navigation_sample3"
        android:name="com.yugyd.idiomatic.android.gradle.ui.sample3.Sample3Fragment"
        android:label="@string/sample3_title"
        tools:layout="@layout/fragment_sample3" />

    <fragment
        android:id="@+id/navigation_sample4"
        android:name="com.yugyd.idiomatic.android.gradle.ui.sample4.Sample4Fragment"
        android:label="@string/sample4_title"
        tools:layout="@layout/fragment_sample4" />

    <fragment
        android:id="@+id/navigation_sample5"
        android:name="com.yugyd.idiomatic.android.gradle.ui.sample5.Sample5Fragment"
        android:label="@string/sample5_title"
        tools:layout="@layout/fragment_sample5" />
</navigation>